# authenticatoin-rust

./: .env  Cargo.toml
src/: config.rs  handlers.rs  main.rs  models.rs  services.rs
src/config/: mod.rs
src/controllers/: counter_controller.rs  item_controller.rs  mod.rs
src/models/: app_state.rs  item.rs
src/static/: index.html  script.js  style.css
src/views/: response.rs
