[package]
name = "authenticatoin-rust"
version = "0.1.0"
authors = ["Julio Daniel Reyes <nemesiscodex@gmail.com>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
time = "0.3"
config = "0.14.1"
dotenv = "0.15"
actix-web = "4.9.0"
actix-rt = "2.5.0"
actix-identity = "0.8.0"
actix-web-httpauth = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
futures = { version = "0.3", features = ["compat"] }
argonautica = { version = "0.2", features = ["simd"] }
sqlx = { version = "0.8.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
color-eyre = "0.6.3"
eyre = "0.6.12"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.19.0"
validator_derive = "0.19.0"
jsonwebtoken = "9.3.0"
tokio = { version = "1", features = ["full"] }
envy = "0.4.2"
mongodb = "3.1.0" 
